fixed x overflow for image slider, changed slider styling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer components {  
+    ::-webkit-scrollbar {
+        width: 6px;
+      }
+      
+      body::-webkit-scrollbar-track {
+        box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+        background-color: rgb(15, 15, 15);
+      }
+       
+      /* Handle */
+      ::-webkit-scrollbar-thumb {
+        background: rgb(16, 116, 79);
+        border-radius: 3px; 
+      }
+    }
+
